# mnist

./: README.md  data.py  evaluate.py  hyperparameters.py  models.py  pyproject.toml  test.ipynb  train.py
